<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="search">Rechercher</string>
    <string name="disconnect">Déconnexion</string>
    <string name="motDePasse">Mot de passe</string>
    <string name="identifiant">Email</string>
    <string name="copyright">Copyright © ZwoD</string>
    <string name="app_name">Annuaire Insta</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="urlWebService">http://88.162.175.176/webservice/web/</string>
    <string name="connexion">Connexion</string>
    <string name="allUserUrl">android_getAllUser/</string>
    <string name="login">android_checkLogin/</string>
    <string name="logoInstaDescription">logo_insta</string>
    <string name="aPropos">À propos</string>
    <string name="contact">Contact</string>
    <string name="contact_head"><b>Soumettez-nous vos questions en cas de\nproblème</b></string>
    <string name="contact_sco"><b>Service clientèle ouvert 7j/7 – 24h/24</b></string>
    <string name="contact_tel">Tél :</string>
    <string name="contact_button_tel"><b>01 43 36 75 56</b></string>
    <string name="contact_mail">Email :</string>
    <string name="contact_button_mail"><b>informatique@insta.fr</b></string>
    <string name="apropos_description_part_1"><b>Annuaire Insta pour Android référence toutes</b></string>
    <string name="apropos_description_part_2"><b>les personnes en lien avec l\'école</b></string>
    <string name="apropos_auteurs">Lucas LEMAIRE, Dany PATIENT</string>
    <string name="apropos_url">http://www.zwod.fr</string>
    <string name="apropos_revision">Révision Obf8385 (2015–20–04)</string>
    <string name="apropos_version">Version 2.89.3</string>
    <string name="rememberme">Se souvenir de moi</string>
    <string name="formation">Formation :</string>
    <string name="promo">Promo :</string>
    <string name="change_to_language">Changer la langue</string>
    <string name="parameters">Paramètres</string>
    <string name="code_change_to_language">en</string>
    <string name="french">French</string>
    <string name="english">English</string>
    <string name ="saisieIdentifiant">Veuillez saisir vos identifiants</string>
    <string name ="erreurIdentifiant">Identifiants ou mot de passe incorrect</string>
    <string name ="erreurConnexion">Erreur de connexion réseau</string>
</resources>
