<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
 
    <TextView
        android:id="@+id/contact_head"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:text="@string/contact_head"/>
	<View
    	android:layout_width="fill_parent"
    	android:layout_height="2dp"
    	android:layout_marginTop="5dp"
    	android:layout_marginBottom="5dp"
    	android:background="@android:color/darker_gray"/>
    <TextView
        android:id="@+id/contact_sco"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/contact_sco"/>    
    <TextView
        android:id="@+id/contact_tel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:text="@string/contact_tel"/>
    
    <Button
        android:id="@+id/contact_button_tel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#B0B0B0"
        android:gravity="center"
        android:layout_marginTop="10dp"
		android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textColor="#FFFFFF"
        android:text="@string/contact_button_tel"
        android:textSize="15dp" />
    
    <TextView
        android:id="@+id/contact_mail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:text="@string/contact_mail"/>

    <Button
        android:id="@+id/contact_button_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#B0B0B0"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="10dp"
        android:text="@string/contact_button_mail"
        android:textColor="#FFFFFF"
        android:textSize="15dp" />
</LinearLayout>
